tests/specs/node/unstable_detect_cjs/type_module/main.out
error: Uncaught SyntaxError: Unexpected token '='
import mod = require("./add.ts");
       ^
    at <anonymous> (file:///[WILDLINE]/main.ts:1:8)
