tests/specs/node/unstable_detect_cjs/type_module/main.ts
import mod = require("./add.ts");

console.log(mod.add(1, 2));
